@@ -3,6 +3,8 @@ Version: 1.3.3
 Date: ????
   Changes:
     - Changed the default color for "low power" status to orange.
+  Bugfixes:
+    - Fixed a crash when an entity has no selection or collision box. (#17)
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.2
 Date: 2024-10-30
